deploy_aks/deploy_squalev1_ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: squale-demo-front2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: squale-demo-front2
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: squale-demo-front2
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: squale-demo-front2
        image: ncsharedacr.azurecr.io/squale:v1
        ports:
        - containerPort: 8007
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: squale-demo-front2
spec:
  type: ClusterIP
  ports:
  - port: 8007
  selector:
    app: squale-demo-front2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: squale-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: squale-demo-front2
            port:
              number: 8007
      # - path: /amiga(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: amiga
      #       port:
      #         number: 80
      # - path: /amstrad(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: amstrad
      #       port:
      #         number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: computer-of-80s-static
#   annotations:
#     nginx.ingress.kubernetes.io/ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /static/$2
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /static(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name:  squale-demo-front2
#             port: 
#               number: 80
